# legacy-opencdms-api

./: .dockerignore  .example.env  .gitignore  .mch_db.example.env  .surface_db.example.env  Dockerfile  Dockerfile.climsoft  MCHtablasycampos.def  README.md  climsoft-db-dummy-data.sql  climsoft-multi-deployment.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  dockerfile  entrypoint.sh  init_climsoft_db.py  main.py  makefile  mch.dbn  mch.dockerfile  play.py  playground.py  pygeoapi-config.yml  pygeoapi-openapi.yml  pyproject.toml  requirements-old.txt  requirements.txt
.github/workflows/: ci_cd.yml  deploy_latest.yml  deploy_stable.yml
apps/climsoft/: db.py
apps/climsoft/controllers/: station_controller.py
apps/climsoft/db/: migration.py
apps/climsoft/schemas/: station_schema.py
apps/climsoft/services/: station_service.py
mch_db/: Dockerfile  create_mch_english_basic_tables.sql  migrate.sh
mch_scripts/: 1.sql
scripts/: load_initial_surface_data.sh
seed-data/climsoft4/: stationlocationhistory.csv
src/: WindroseGenerator.py  config.py  main.py
src/apps/auth/: main.py
src/apps/climsoft/: main.py
src/apps/surface/: main.py  models.py  settings.py
src/db/: engine.py
src/dependencies/: auth.py
src/middlewares/: auth.py
src/opencdms_api/: climsoft_app.py  climsoft_rbac_config.py  config.py  db.py  deps.py  main.py  middelware.py  middleware.py  models.py  router.py  schema.py
src/opencdms_api/templates/: index.html
src/opencdms_api/utils/: multi_deployment.py
src/opencdms_server/: config.py  db.py  deps.py  main.py  middelware.py  models.py  router.py  schema.py
src/utils/: controllers.py  models.py  response.py
tests/: conftest.py  test_router.py
tests/auth/controller/: test_auth_controller.py
tests/climsoft/controller/: test_instrument_controller.py  test_obselement_controller.py  test_observationfinal_controller.py  test_observationinitial_controller.py  test_obsscheduleclass_controller.py  test_station_controller.py  test_stationelement_controller.py
tests/datagen/auth/: user.py
tests/datagen/climsoft/: acquisitiontype.py  data_form.py  faultresolution.py  featuregeographicalposition.py  flag.py  instrument.py  instrumentfaultreport.py  instrumentinspection.py  obselement.py  observationfinal.py  observationinitial.py  obsscheduleclass.py  paperarchive.py  paperarchivedefinition.py  physicalfeature.py  physicalfeatureclass.py  qctype.py  (+7 more)
traefik/: traefik.toml
(+125 files in other folders)
