[tool.poetry]
name = "opencdms-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.26"
opencdms = {git = "https://github.com/Shaibujnr/pyopencdms.git", rev = "remove-other-setups"}
passlib = "^1.7.4"
inflection = "^0.5.1"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
mch-api = {git = "https://github.com/Shaibujnr/mch-api.git", rev = "make_mch_api_installable"}
Faker = "^10.0.0"
python-multipart = "^0.0.5"
pygeoapi = "^0.11.0"
nest-asyncio = "^1.5.4"
rpy2 = "^3.4.5"
Flask-Cors = "^3.0.10"
opencdms-process = {git = "https://github.com/faysal-ishtiaq/opencdms-process", rev = "windrose-process"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
