[tool.poetry]
name = "opencdms-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.16.0"
SQLAlchemy = "^1.4.26"
passlib = "^1.7.4"
inflection = "^0.5.1"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
Faker = "^10.0.0"
python-multipart = "^0.0.5"
opencdms = {git = "https://github.com/opencdms/pyopencdms.git", rev = "main"}
climsoft-api = {git = "https://github.com/opencdms/climsoft-api.git", rev = "main"}
mch-api = {git = "https://github.com/opencdms/mch-api.git", rev = "main"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
